--- a/templates/results.html
+++ b/templates/results.html
@@ -13,7 +13,7 @@
 <h1>Behold!  Every Key!</h1>
 
 {% for key in notes.keys(): %}
-    <h1>{{key}}</h1>
+    <h1>{{key.replace('t','♭')}}</h1>
     {% for row in notes[key]: %}
         <div class="container">
             <h2 class = "first-cell">{{row[0].replace('t','♭')}}</h2>
