--- a/templates/results.html
+++ b/templates/results.html
@@ -4,7 +4,7 @@
 
 {% block styles %}
 {{ super() }}
-<link rel="stylesheet" href="static/css/styles.css">
+<link rel="stylesheet" href="/static/css/styles.css">
 {% endblock %}
 
 
